added: msn Icons

--- a/trunk/plugins/_core/_core.vcproj
+++ b/trunk/plugins/_core/_core.vcproj
@@ -7909,7 +7909,7 @@
 						<Tool
 							Name="VCCustomBuildTool"
 							Description="Make yahoo.jisp"
-							CommandLine="mkdir $(IntDir)\jisp&#x0D;&#x0A;copy $(InputDir)*.gif $(IntDir)\jisp&#x0D;&#x0A;copy $(InputDir)icondef.xml $(IntDir)\jisp&#x0D;&#x0A;jar -cMf $(OutDir)\icons\yahoo.jisp -C $(IntDir)\jisp .&#x0D;&#x0A;del /Q $(IntDir)\jisp\*.*&#x0D;&#x0A;rmdir /Q $(IntDir)\jisp"
+							CommandLine="mkdir $(IntDir)\jisp&#x0D;&#x0A;copy $(InputDir)*.gif $(IntDir)\jisp&#x0D;&#x0A;copy $(InputDir)icondef.xml $(IntDir)\jisp&#x0D;&#x0A;jar -cMf $(OutDir)\icons\yahoo.jisp -C $(IntDir)\jisp .&#x0D;&#x0A;del /Q $(IntDir)\jisp\*.*&#x0D;&#x0A;rmdir /Q $(IntDir)\jisp&#x0D;&#x0A;"
 							AdditionalDependencies=""
 							Outputs="$(OutDir)\icons\yahoo.jisp"
 						/>
@@ -7920,7 +7920,7 @@
 						<Tool
 							Name="VCCustomBuildTool"
 							Description="Make yahoo.jisp"
-							CommandLine="mkdir $(IntDir)\jisp&#x0D;&#x0A;copy $(InputDir)*.gif $(IntDir)\jisp&#x0D;&#x0A;copy $(InputDir)icondef.xml $(IntDir)\jisp&#x0D;&#x0A;jar -cMf $(OutDir)\icons\yahoo.jisp -C $(IntDir)\jisp .&#x0D;&#x0A;del /Q $(IntDir)\jisp\*.*&#x0D;&#x0A;rmdir /Q $(IntDir)\jisp"
+							CommandLine="mkdir $(IntDir)\jisp&#x0D;&#x0A;copy $(InputDir)*.gif $(IntDir)\jisp&#x0D;&#x0A;copy $(InputDir)icondef.xml $(IntDir)\jisp&#x0D;&#x0A;jar -cMf $(OutDir)\icons\yahoo.jisp -C $(IntDir)\jisp .&#x0D;&#x0A;del /Q $(IntDir)\jisp\*.*&#x0D;&#x0A;rmdir /Q $(IntDir)\jisp&#x0D;&#x0A;"
 							Outputs="$(OutDir)\icons\yahoo.jisp"
 						/>
 					</FileConfiguration>
@@ -8119,6 +8119,362 @@
 				</File>
 				<File
 					RelativePath=".\yahoo\yin_yang.gif"
+					>
+				</File>
+			</Filter>
+			<Filter
+				Name="msn"
+				>
+				<File
+					RelativePath=".\msn\airplane.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\msn\angel_smile.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\msn\angry_smile.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\msn\asl.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\msn\auto.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\msn\baring_teeth_smile.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\msn\bat.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\msn\beer_mug.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\msn\black_sheep.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\msn\bowl.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\msn\brb.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\msn\broken_heart.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\msn\cake.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\msn\camera.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\msn\cat.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\msn\cigarette.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\msn\clock.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\msn\coffee.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\msn\computer.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\msn\confused_smile.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\msn\cry_smile.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\msn\devil_smile.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\msn\dog.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\msn\dont_know_smile.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\msn\dont_tell_smile.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\msn\envelope.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\msn\film.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\msn\fingerscrossed.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\msn\girl.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\msn\girl_hug.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\msn\guy.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\msn\guy_hug.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\msn\handcuffs.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\msn\heart.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\msn\hifive.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\msn\icondef.xml"
+					>
+					<FileConfiguration
+						Name="Release|Win32"
+						>
+						<Tool
+							Name="VCCustomBuildTool"
+							Description="Make msn.jisp"
+							CommandLine="mkdir $(IntDir)\jisp"
+							Outputs="$(OutDir)\icons\msn.jisp"
+						/>
+					</FileConfiguration>
+					<FileConfiguration
+						Name="Debug|Win32"
+						>
+						<Tool
+							Name="VCCustomBuildTool"
+							Description="Make msn.jisp"
+							CommandLine="mkdir $(IntDir)\jisp&#x0D;&#x0A;copy $(InputDir)*.png $(IntDir)\jisp&#x0D;&#x0A;copy $(InputDir)icondef.xml $(IntDir)\jisp&#x0D;&#x0A;jar -cMf $(OutDir)\icons\msn.jisp -C $(IntDir)\jisp .&#x0D;&#x0A;del /Q $(IntDir)\jisp\*.*&#x0D;&#x0A;rmdir /Q $(IntDir)\jisp"
+							Outputs="$(OutDir)\icons\msn.jisp"
+						/>
+					</FileConfiguration>
+				</File>
+				<File
+					RelativePath=".\msn\island_palm.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\msn\kiss.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\msn\lightbulb.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\msn\lightning.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\msn\martini.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\msn\messenger.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\msn\mobile_phone.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\msn\money.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\msn\moon.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\msn\nerd_smile.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\msn\note.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\msn\omg_smile.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\msn\party_smile.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\msn\phone.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\msn\pizza.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\msn\plate.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\msn\present.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\msn\rainbow.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\msn\red_smile.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\msn\regular_smile.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\msn\roll_smile.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\msn\rose.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\msn\sad_smile.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\msn\sarcastic_smile.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\msn\secret_smile.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\msn\shades_smile.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\msn\sick_smile.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\msn\sleepy_smile.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\msn\smilec.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\msn\snail.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\msn\soccer_ball.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\msn\star.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\msn\stormy.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\msn\sun.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\msn\teeth_smile.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\msn\thinking_smile.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\msn\thumbs_down.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\msn\thumbs_up.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\msn\tongue_smile.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\msn\trillian_lol.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\msn\trillian_roll.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\msn\turtle.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\msn\umbrella.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\msn\what_smile.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\msn\wilted_rose.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\msn\wink_smile.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\msn\xbox.gif"
 					>
 				</File>
 			</Filter>
