Implemented !Alpha!-Support for Audiere. (wav, mp3, ogg, flag ...) Thanks to... me :-D (this time) :-P Perhaps anybody can make this run without blocking the app in fine threads... I tried, but got no success. On the other side it is f**** *late now.. (In Linux for flac, libflac is needed additionally)

--- a/trunk/plugins/sound/sound.vcproj
+++ b/trunk/plugins/sound/sound.vcproj
@@ -160,10 +160,12 @@
 			<Tool
 				Name="VCLinkerTool"
 				IgnoreImportLibrary="true"
-				AdditionalDependencies="$(SolutionDir)$(ConfigurationName)\sim.lib"
+				AdditionalDependencies="$(SolutionDir)$(ConfigurationName)\sim.lib audiere.lib"
 				OutputFile="$(OutDir)\plugins\$(ProjectName).dll"
 				LinkIncremental="2"
 				SuppressStartupBanner="true"
+				AddModuleNamesToAssembly=""
+				DelayLoadDLLs="audiere.dll"
 				GenerateDebugInformation="true"
 				TargetMachine="1"
 			/>
