--- a/trunk/plugins/sound/Makefile.am
+++ b/trunk/plugins/sound/Makefile.am
@@ -11,7 +11,7 @@ INCLUDES=-I$(srcdir)/../../sim -I../_core -I$(srcdir)/../_core $(all_includes)
 SUBDIRS=sounds
 
 sound_la_METASOURCES = AUTO
-sound_la_LIBADD = ../../sim/libsim.la  $(LIBUI) $(LIB_KDECORE) $(LIB_QT) $(EXTRA_LIBS)
+sound_la_LIBADD = ../../sim/libsim.la  $(LIBUI) $(LIB_KDECORE) $(LIB_QT) $(EXTRA_LIBS) -laudiere
 sound_la_LDFLAGS = -module -no-undefined -avoid-version -L../../sim/.libs $(QT_LDFLAGS) $(KDE_RPATH) $(all_libraries)
 
 
