--- a/trunk/plugins/_core/_core.vcproj
+++ b/trunk/plugins/_core/_core.vcproj
@@ -7220,19 +7220,19 @@
 			</Filter>
 		</Filter>
 		<Filter
-			Name="emoticons_prebuilded"
+			Name="emoticons_prebuilt"
 			>
 			<File
-				RelativePath=".\emoticons_prebuilded\additional.jisp"
+				RelativePath=".\emoticons_prebuilt\additional.jisp"
 				>
 				<FileConfiguration
 					Name="Release|Win32"
 					>
 					<Tool
 						Name="VCCustomBuildTool"
-						Description="Coping EMOTICONS"
+						Description="Copying EMOTICONS &amp; ICONS"
 						CommandLine="copy $(InputDir)*.jisp $(SolutionDir)$(ConfigurationName)\icons"
-						Outputs=" $(SolutionDir)$(ConfigurationName)\icons\*.jisp"
+						Outputs="$(SolutionDir)$(ConfigurationName)\icons\*.jisp"
 					/>
 				</FileConfiguration>
 				<FileConfiguration
@@ -7240,70 +7240,70 @@
 					>
 					<Tool
 						Name="VCCustomBuildTool"
-						Description="Coping EMOTICONS"
+						Description="Copying EMOTICONS &amp; ICONS"
 						CommandLine="copy $(InputDir)*.jisp $(SolutionDir)$(ConfigurationName)\icons"
 						Outputs="$(SolutionDir)$(ConfigurationName)\icons\*.jisp"
 					/>
 				</FileConfiguration>
 			</File>
 			<File
-				RelativePath=".\emoticons_prebuilded\amibulb.jisp"
+				RelativePath=".\emoticons_prebuilt\amibulb.jisp"
 				>
 			</File>
 			<File
-				RelativePath=".\emoticons_prebuilded\apple_ichat.jisp"
+				RelativePath=".\emoticons_prebuilt\apple_ichat.jisp"
 				>
 			</File>
 			<File
-				RelativePath=".\emoticons_prebuilded\gants.jisp"
+				RelativePath=".\emoticons_prebuilt\gants.jisp"
 				>
 			</File>
 			<File
-				RelativePath=".\emoticons_prebuilded\icq5.1.jisp"
+				RelativePath=".\emoticons_prebuilt\icq5.1.jisp"
 				>
 			</File>
 			<File
-				RelativePath=".\emoticons_prebuilded\icq5.jisp"
+				RelativePath=".\emoticons_prebuilt\icq5.jisp"
 				>
 			</File>
 			<File
-				RelativePath=".\emoticons_prebuilded\icqlite.jisp"
+				RelativePath=".\emoticons_prebuilt\icqlite.jisp"
 				>
 			</File>
 			<File
-				RelativePath=".\emoticons_prebuilded\lovenmoney.jisp"
+				RelativePath=".\emoticons_prebuilt\lovenmoney.jisp"
 				>
 			</File>
 			<File
-				RelativePath=".\emoticons_prebuilded\msn.jisp"
+				RelativePath=".\emoticons_prebuilt\msn.jisp"
 				>
 			</File>
 			<File
-				RelativePath=".\emoticons_prebuilded\SIM-icons-Crystal-full.jisp"
+				RelativePath=".\emoticons_prebuilt\SIM-icons-Crystal-full.jisp"
 				>
 			</File>
 			<File
-				RelativePath=".\emoticons_prebuilded\SIM-icons-Nuvola-full.jisp"
+				RelativePath=".\emoticons_prebuilt\SIM-icons-Nuvola-full.jisp"
 				>
 			</File>
 			<File
-				RelativePath=".\emoticons_prebuilded\SIM-icons-XP-full.jisp"
+				RelativePath=".\emoticons_prebuilt\SIM-icons-XP-full.jisp"
 				>
 			</File>
 			<File
-				RelativePath=".\emoticons_prebuilded\sim.jisp"
+				RelativePath=".\emoticons_prebuilt\sim.jisp"
 				>
 			</File>
 			<File
-				RelativePath=".\emoticons_prebuilded\sim2.jisp"
+				RelativePath=".\emoticons_prebuilt\sim2.jisp"
 				>
 			</File>
 			<File
-				RelativePath=".\emoticons_prebuilded\smiles.jisp"
+				RelativePath=".\emoticons_prebuilt\smiles.jisp"
 				>
 			</File>
 			<File
-				RelativePath=".\emoticons_prebuilded\yahoo.jisp"
+				RelativePath=".\emoticons_prebuilt\yahoo.jisp"
 				>
 			</File>
 		</Filter>
