--- a/trunk/plugins/_core/_core.vcproj
+++ b/trunk/plugins/_core/_core.vcproj
@@ -7151,6 +7151,298 @@
 				</FileConfiguration>
 			</File>
 		</Filter>
+		<Filter
+			Name="gpl-jisp"
+			>
+			<File
+				RelativePath=".\GPL-Icons\1downarrow.png"
+				>
+			</File>
+			<File
+				RelativePath=".\GPL-Icons\1leftarrow.png"
+				>
+			</File>
+			<File
+				RelativePath=".\GPL-Icons\1rightarrow.png"
+				>
+			</File>
+			<File
+				RelativePath=".\GPL-Icons\1uparrow.png"
+				>
+			</File>
+			<File
+				RelativePath=".\GPL-Icons\aim_online.png"
+				>
+			</File>
+			<File
+				RelativePath=".\GPL-Icons\auth.png"
+				>
+			</File>
+			<File
+				RelativePath=".\GPL-Icons\button_cancel.png"
+				>
+			</File>
+			<File
+				RelativePath=".\GPL-Icons\button_ok.png"
+				>
+			</File>
+			<File
+				RelativePath=".\GPL-Icons\cell.png"
+				>
+			</File>
+			<File
+				RelativePath=".\GPL-Icons\collapsed.png"
+				>
+			</File>
+			<File
+				RelativePath=".\GPL-Icons\configure.png"
+				>
+			</File>
+			<File
+				RelativePath=".\GPL-Icons\contacts.png"
+				>
+			</File>
+			<File
+				RelativePath=".\GPL-Icons\def_status_away.png"
+				>
+			</File>
+			<File
+				RelativePath=".\GPL-Icons\def_status_dnd.png"
+				>
+			</File>
+			<File
+				RelativePath=".\GPL-Icons\def_status_ffc.png"
+				>
+			</File>
+			<File
+				RelativePath=".\GPL-Icons\def_status_na.png"
+				>
+			</File>
+			<File
+				RelativePath=".\GPL-Icons\def_status_occupied.png"
+				>
+			</File>
+			<File
+				RelativePath=".\GPL-Icons\empty.png"
+				>
+			</File>
+			<File
+				RelativePath=".\GPL-Icons\error.png"
+				>
+			</File>
+			<File
+				RelativePath=".\GPL-Icons\exit.png"
+				>
+			</File>
+			<File
+				RelativePath=".\GPL-Icons\expanded.png"
+				>
+			</File>
+			<File
+				RelativePath=".\GPL-Icons\fax.png"
+				>
+			</File>
+			<File
+				RelativePath=".\GPL-Icons\file.png"
+				>
+			</File>
+			<File
+				RelativePath=".\GPL-Icons\fileopen.png"
+				>
+			</File>
+			<File
+				RelativePath=".\GPL-Icons\filesave.png"
+				>
+			</File>
+			<File
+				RelativePath=".\GPL-Icons\find_user.png"
+				>
+			</File>
+			<File
+				RelativePath=".\GPL-Icons\fonts.png"
+				>
+			</File>
+			<File
+				RelativePath=".\GPL-Icons\gadu_away.png"
+				>
+			</File>
+			<File
+				RelativePath=".\GPL-Icons\gadu_dnd.png"
+				>
+			</File>
+			<File
+				RelativePath=".\GPL-Icons\gadu_invisible.png"
+				>
+			</File>
+			<File
+				RelativePath=".\GPL-Icons\gadu_offline.png"
+				>
+			</File>
+			<File
+				RelativePath=".\GPL-Icons\gadu_online.png"
+				>
+			</File>
+			<File
+				RelativePath=".\GPL-Icons\group_collapsed.png"
+				>
+			</File>
+			<File
+				RelativePath=".\GPL-Icons\group_expanded.png"
+				>
+			</File>
+			<File
+				RelativePath=".\GPL-Icons\grp_create.png"
+				>
+			</File>
+			<File
+				RelativePath=".\GPL-Icons\grp_off.png"
+				>
+			</File>
+			<File
+				RelativePath=".\GPL-Icons\grp_on.png"
+				>
+			</File>
+			<File
+				RelativePath=".\GPL-Icons\grp_rename.png"
+				>
+			</File>
+			<File
+				RelativePath=".\GPL-Icons\home.png"
+				>
+			</File>
+			<File
+				RelativePath=".\GPL-Icons\icondef.xml"
+				>
+				<FileConfiguration
+					Name="Release|Win32"
+					>
+					<Tool
+						Name="VCCustomBuildTool"
+						Description="Make gpl.jisp"
+						CommandLine="mkdir $(IntDir)\jisp&#x0D;&#x0A;copy $(InputDir)*.png $(IntDir)\jisp&#x0D;&#x0A;copy $(InputDir)icondef.xml $(IntDir)\jisp&#x0D;&#x0A;jar -cMf $(OutDir)\icons\gpl.jisp -C $(IntDir)\jisp .&#x0D;&#x0A;del /Q $(IntDir)\jisp\*.*&#x0D;&#x0A;rmdir /Q $(IntDir)\jisp&#x0D;&#x0A;"
+						Outputs="$(OutDir)\icons\gpl.jisp"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Debug|Win32"
+					>
+					<Tool
+						Name="VCCustomBuildTool"
+						Description="Make gpl.jisp"
+						CommandLine="mkdir $(IntDir)\jisp&#x0D;&#x0A;copy $(InputDir)*.png $(IntDir)\jisp&#x0D;&#x0A;copy $(InputDir)icondef.xml $(IntDir)\jisp&#x0D;&#x0A;jar -cMf $(OutDir)\icons\gpl.jisp -C $(IntDir)\jisp .&#x0D;&#x0A;del /Q $(IntDir)\jisp\*.*&#x0D;&#x0A;rmdir /Q $(IntDir)\jisp&#x0D;&#x0A;"
+						Outputs="$(OutDir)\icons\gpl.jisp"
+					/>
+				</FileConfiguration>
+			</File>
+			<File
+				RelativePath=".\GPL-Icons\icq_online.png"
+				>
+			</File>
+			<File
+				RelativePath=".\GPL-Icons\jabber.png"
+				>
+			</File>
+			<File
+				RelativePath=".\GPL-Icons\jabber_offline.png"
+				>
+			</File>
+			<File
+				RelativePath=".\GPL-Icons\mail_generic.png"
+				>
+			</File>
+			<File
+				RelativePath=".\GPL-Icons\message.png"
+				>
+			</File>
+			<File
+				RelativePath=".\GPL-Icons\msn_online.png"
+				>
+			</File>
+			<File
+				RelativePath=".\GPL-Icons\network.png"
+				>
+			</File>
+			<File
+				RelativePath=".\GPL-Icons\no_phone.png"
+				>
+			</File>
+			<File
+				RelativePath=".\GPL-Icons\non-im-contact.png"
+				>
+			</File>
+			<File
+				RelativePath=".\GPL-Icons\online_off.png"
+				>
+			</File>
+			<File
+				RelativePath=".\GPL-Icons\online_on.png"
+				>
+			</File>
+			<File
+				RelativePath=".\GPL-Icons\pager.png"
+				>
+			</File>
+			<File
+				RelativePath=".\GPL-Icons\phone.png"
+				>
+			</File>
+			<File
+				RelativePath=".\GPL-Icons\remove.png"
+				>
+			</File>
+			<File
+				RelativePath=".\GPL-Icons\run.png"
+				>
+			</File>
+			<File
+				RelativePath=".\GPL-Icons\security.png"
+				>
+			</File>
+			<File
+				RelativePath=".\GPL-Icons\sim.png"
+				>
+			</File>
+			<File
+				RelativePath=".\GPL-Icons\sms.png"
+				>
+			</File>
+			<File
+				RelativePath=".\GPL-Icons\url.png"
+				>
+			</File>
+			<File
+				RelativePath=".\GPL-Icons\webpress.png"
+				>
+			</File>
+			<File
+				RelativePath=".\GPL-Icons\work.png"
+				>
+			</File>
+			<File
+				RelativePath=".\GPL-Icons\yahoo_away.png"
+				>
+			</File>
+			<File
+				RelativePath=".\GPL-Icons\yahoo_dnd.png"
+				>
+			</File>
+			<File
+				RelativePath=".\GPL-Icons\yahoo_invisible.png"
+				>
+			</File>
+			<File
+				RelativePath=".\GPL-Icons\yahoo_na.png"
+				>
+			</File>
+			<File
+				RelativePath=".\GPL-Icons\yahoo_offline.png"
+				>
+			</File>
+			<File
+				RelativePath=".\GPL-Icons\yahoo_online.png"
+				>
+			</File>
+		</Filter>
 	</Files>
 	<Globals>
 	</Globals>
