Installing *.ogg files via cmake. Thanks Bernd Steinhauser for the patch.

--- a/trunk/plugins/sound/CMakeLists.txt
+++ b/trunk/plugins/sound/CMakeLists.txt
@@ -34,3 +34,24 @@ INSTALL(FILES sounds/startup.wav    DESTINATION ${SIM_SOUND_DIR})
 INSTALL(FILES sounds/system.wav     DESTINATION ${SIM_SOUND_DIR})
 INSTALL(FILES sounds/url.wav        DESTINATION ${SIM_SOUND_DIR})
 INSTALL(FILES sounds/vip-online.wav DESTINATION ${SIM_SOUND_DIR})
+
+# install new sounds with known licence
+INSTALL(FILES sounds/added.ogg		DESTINATION ${SIM_SOUND_DIR})
+INSTALL(FILES sounds/alert.ogg		DESTINATION ${SIM_SOUND_DIR})
+INSTALL(FILES sounds/auth.ogg		DESTINATION ${SIM_SOUND_DIR})
+INSTALL(FILES sounds/authrequest.ogg	DESTINATION ${SIM_SOUND_DIR})
+INSTALL(FILES sounds/contacts.ogg	DESTINATION ${SIM_SOUND_DIR})
+INSTALL(FILES sounds/contactrequest.ogg	DESTINATION ${SIM_SOUND_DIR})
+INSTALL(FILES sounds/deleted.ogg	DESTINATION ${SIM_SOUND_DIR})
+INSTALL(FILES sounds/error.ogg		DESTINATION ${SIM_SOUND_DIR})
+INSTALL(FILES sounds/file.ogg		DESTINATION ${SIM_SOUND_DIR})
+INSTALL(FILES sounds/filedone.ogg	DESTINATION ${SIM_SOUND_DIR})
+INSTALL(FILES sounds/mailpager.ogg	DESTINATION ${SIM_SOUND_DIR})
+INSTALL(FILES sounds/message.ogg	DESTINATION ${SIM_SOUND_DIR})
+INSTALL(FILES sounds/msgsent.ogg	DESTINATION ${SIM_SOUND_DIR})
+INSTALL(FILES sounds/refused.ogg	DESTINATION ${SIM_SOUND_DIR})
+INSTALL(FILES sounds/sms.ogg		DESTINATION ${SIM_SOUND_DIR})
+INSTALL(FILES sounds/startup.ogg	DESTINATION ${SIM_SOUND_DIR})
+INSTALL(FILES sounds/url.ogg		DESTINATION ${SIM_SOUND_DIR})
+INSTALL(FILES sounds/vip-online.ogg	DESTINATION ${SIM_SOUND_DIR})
+INSTALL(FILES sounds/web.ogg		DESTINATION ${SIM_SOUND_DIR})
