Change USE_* variables to ENABLE_* (For example USE_KDE3 is now known as ENABLE_KDE3) Please be attentive. Something might be broken. I've check everything I can, but may be I've missed something.
This patch were sent by Bernd Steinhauser

--- a/trunk/CMakeLists.txt
+++ b/trunk/CMakeLists.txt
@@ -51,20 +51,20 @@ INCLUDE(FindX11)
 IF(NOT WIN32)
     INCLUDE(FindKDE3)
     IF(KDE3_FOUND)
-        OPTION(USE_KDE3 "Use kde3 integration" YES)
-        IF(USE_KDE3)
+        OPTION(ENABLE_KDE3 "Use kde3 integration" YES)
+        IF(ENABLE_KDE3)
             INCLUDE_DIRECTORIES(${KDE3_INCLUDE_DIRS})
             LINK_DIRECTORIES(${KDE3_LIB_DIR})
-        ENDIF(USE_KDE3)
+        ENDIF(ENABLE_KDE3)
     ENDIF(KDE3_FOUND)
 ENDIF(NOT WIN32)
 
 # do config checks
 INCLUDE(ConfigureChecks.cmake)
 
-MACRO_BOOL_TO_01(OPENSSL_FOUND USE_OPENSSL)
+MACRO_BOOL_TO_01(OPENSSL_FOUND ENABLE_OPENSSL)
 MACRO_BOOL_TO_01(X11_FOUND HAVE_X)
-MACRO_BOOL_TO_01(USE_KDE3 USE_KDE)
+MACRO_BOOL_TO_01(ENABLE_KDE3 USE_KDE)
 
 # development or release builds
 OPTION(DEV_BUILD "Build development version" YES)
