--- a/trunk/sim/CMakeLists.txt
+++ b/trunk/sim/CMakeLists.txt
@@ -117,11 +117,11 @@ if(OPENSSL_FOUND)
   TARGET_LINK_LIBRARIES(simlib ${OPENSSL_LIBRARIES} ${OPENSSL_EAY_LIBRARIES})
 endif(OPENSSL_FOUND)
 
-IF(USE_KDE3)
+IF(ENABLE_KDE3)
   ADD_DEFINITIONS(${KDE3_DEFINITIONS})
   LINK_DIRECTORIES(${KDE3_LIB_DIR})
   TARGET_LINK_LIBRARIES(simlib ${QT_AND_KDECORE_LIBS} kdeui kio)
-ENDIF(USE_KDE3)
+ENDIF(ENABLE_KDE3)
 
 # we need wsock32 on win32
 if (WIN32)
