--- a/trunk/plugins/spell/CMakeLists.txt
+++ b/trunk/plugins/spell/CMakeLists.txt
@@ -1,4 +1,4 @@
-IF(ASPELL_FOUND AND NOT USE_KDE3)
+IF(ASPELL_FOUND AND NOT ENABLE_KDE3)
 
     #################
     # spell library #
@@ -42,10 +42,10 @@ IF(ASPELL_FOUND AND NOT USE_KDE3)
 
     SIM_ADD_PLUGIN(spell)
 
-ELSE(ASPELL_FOUND AND NOT USE_KDE3)
-  IF(USE_KDE3)
+ELSE(ASPELL_FOUND AND NOT ENABLE_KDE3)
+  IF(ENABLE_KDE3)
     MESSAGE(STATUS "Spell plugin is disabled when building with KDE")
-  ELSE(USE_KDE3)
+  ELSE(ENABLE_KDE3)
     MESSAGE(STATUS "Cannot build spell plugin because aspell is missing on your system")
-  ENDIF(USE_KDE3)
-ENDIF(ASPELL_FOUND AND NOT USE_KDE3)
+  ENDIF(ENABLE_KDE3)
+ENDIF(ASPELL_FOUND AND NOT ENABLE_KDE3)
